# minilp

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  Testing.txt  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b2c1d4e6f8a0_m4_quality_subsystem.py  c3d5e7f9a1b2_m5_template_sample.py  fa4559003e71_initial_schema_full_data_model.py
backend/app/: __init__.py  bootstrap_demo.py  config.py  db.py  main.py  seed.py
backend/app/api/: __init__.py  analytics.py  annotators.py  deps.py  projects.py  tasks.py  templates.py  units.py
backend/app/models/: __init__.py  _mixins.py  annotator.py  batch.py  final_label.py  judge_config.py  label.py  project.py  reputation_event.py  slot.py  template.py  unit.py  user.py  webhook.py
backend/app/schemas/: __init__.py  api.py
backend/app/services/: __init__.py
backend/app/services/analytics/: __init__.py  bias.py  distribution.py  progress.py  roster.py  stats.py  unit_detail.py
backend/app/services/assignment/: __init__.py  engine.py
backend/app/services/auth/: __init__.py  roles.py
backend/app/services/ingest/: __init__.py  bulk.py
backend/app/services/projects/: __init__.py  service.py
backend/app/services/quality/: __init__.py  agreement.py  canonical.py  consensus.py  gold.py  matching.py  pipeline.py  reputation.py  thresholds.py
backend/app/services/slots/: __init__.py  generation.py  lifecycle.py
backend/app/services/templates/: __init__.py  hotkeys.py  preview.py  repository.py  sample.py  seed.py  spec.py  validation.py  versioning.py
backend/tests/: conftest.py  test_analytics_api.py  test_analytics_bias.py  test_analytics_progress.py  test_analytics_stats.py  test_api.py  test_assignment.py  test_auth_roles.py  test_available_work.py  test_clone_versioning.py  test_concurrency.py  test_ingest.py  test_ingest_formats.py  test_projects_and_constraints.py  test_quality_agreement.py  test_quality_api.py  test_quality_matching.py  test_quality_pipeline.py  test_slots.py  test_template_sample.py  test_template_validation.py
docs/: DESIGN.md
frontend/: .dockerignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  theme.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Badge.tsx  GuidelinesPanel.tsx  HotkeyOverlay.tsx  SessionStats.tsx
frontend/src/fixtures/: gallery.ts
frontend/src/hotkeys/: assign.test.ts  assign.ts  event.ts
frontend/src/render/: canonical.test.ts  canonical.ts  complete.test.ts  complete.ts  markdown.ts  options.ts  resolve.test.ts  resolve.ts
frontend/src/views/: Annotate.test.tsx  Annotate.tsx  AnnotatePage.tsx  AnnotateQuality.test.tsx  TasksLanding.tsx
frontend/src/views/admin/: AdminApp.tsx  BiasPanel.tsx  Dashboard.tsx  ProgressPanel.tsx  ProjectView.tsx  RosterPanel.tsx  TemplateGallery.tsx  UnitBrowser.tsx  Wizard.tsx  format.test.ts  format.ts  payloadExamples.test.ts  payloadExamples.ts  widgets.tsx
frontend/src/widgets/: registry.ts
frontend/src/widgets/display/: AudioBlock.tsx  CodeBlock.tsx  HtmlSnippetBlock.tsx  ImageBlock.tsx  MarkdownBlock.tsx  PanelGroup.tsx  TextBlock.tsx  (+1 more)
(+7 files in other folders)
