[project]
name = "minilp-backend"
version = "0.1.0"
description = "MiniLP - mini labeling platform for configurable human and model labeling"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx2>=2.7",
    "ruff>=0.6",
]
# Optional local-only helper: spins up a throwaway PostgreSQL so `pytest` needs no
# external DB. Not in `dev` because it has no wheel for every OS/Python (e.g. no
# Windows wheel, no Python 3.14 build). CI uses a real Postgres service via
# TEST_DATABASE_URL and never needs this. Install with:
#   pip install -e ".[dev,localdb]"   (Linux/macOS, Python <= 3.12)
localdb = [
    "pgserver>=0.1.4; sys_platform != 'win32'",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/api/*" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
